--- a/base/style.css
+++ b/base/style.css
@@ -1,7 +1,120 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import url(/base/variables/variables.css);
 
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+body{
+    font-family: "Ubuntu", sans-serif;
+    cursor: url("https://cdn.discordapp.com/attachments/1106712720742568006/1304856650032746588/image.png?ex=6730e9f4&is=672f9874&hm=06ec4b25889dd73081776a2d159c9ce5b5e1570e2fbab324533683bcebdd4c98&"), auto;
+}
+
+.container.content{
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+}
+
+.switch{
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input{
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: green;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider::before{
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    top: 4px;
+    background-color: greenyellow;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:checked + .slider::before{
+    transform: translateX(26px);
+}
+
+
+
+
+
+
+
+.left-side{
+    height: 100%;
+    padding: .5rem;
+}
+
+.channels{
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+.channel-item{
+    display: flex;
+    gap: .2rem;
+    transition: .3s;
+    cursor: pointer;
+    filter: drop-shadow(0 0 5px #000000);
+}
+
+.channel-item:active{
+    scale: .95;
+}
+
+.left-side .channel-item img{
+    width: var(--side-img-scale);
+    height: var(--side-img-scale);
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.channel-text{
+    display: flex;
+    align-items: end;
+    text-align: start;
+}
+
+.right-side{
+    width: 15rem;
+    height: 100%;
+}
+
+.middle{
+    width: 100%;
+    height: 100%;
+}
+
+.channels:has(.channel-item:hover) > :not(:hover){
+    opacity: .5;
 }
