--- a/base/variables/variables.css
+++ b/base/variables/variables.css
@@ -1,5 +1,19 @@
 *{margin: 0; padding: 0; box-sizing: border-box;}
 
+:root{
+    --main-bg-color-dark: rgb(30,30,30);
+    --main-bg-color-light: rgb(228, 228, 228);
+    --main-color-light: black;
+    --main-color-dark: white;
+
+    --side-bg-color-dark: rgb(20,20,20);
+    --side-bg-color-light: rgb(192, 192, 192);
+    --side-color-dark: white;
+    --side-color-light: black;
+
+    --side-img-scale: 4rem;
+}
+
 .active-bk{
     display: block;
 }
@@ -10,4 +24,29 @@
 
 .hidden{
     display: none;
+}
+
+.dark-theme{
+    background: var(--main-bg-color-dark);
+    color: var(--main-color-dark);
+}
+
+.light-theme{
+    background: var(--main-bg-color-light);
+    color: var(--main-color-light);
+}
+
+.side-dark{
+    background: var(--side-bg-color-dark);
+    color: var(--side-color-dark);
+}
+
+.side-light{
+    background: var(--side-bg-color-light);
+    color: var(--side-color-light);
+}
+
+.container{
+    width: 100%;
+    height: 100%;
 }
