--- a/base/style.css
+++ b/base/style.css
@@ -1,10 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import url(/base/variables/variables.css);
+@import url(/base/variables/animations.css);
 
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+i{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 body{
@@ -72,37 +79,58 @@ input:checked + .slider::before{
 .left-side{
     height: 100%;
     padding: .5rem;
-}
-
-.channels{
+    width: 5rem;
     display: flex;
     flex-direction: column;
-    gap: .5rem;
+    align-items: center;
+}
+
+.channel-text{
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+
+.left-side .line{
+    width: 100%;
+    margin: .5rem 0;
+}
+
+.left-icon{
+    cursor: pointer;
+    text-align: center;
+    font-size: 3rem;
+}
+
+.channels {
+    max-height: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 }
 
 .channel-item{
     display: flex;
-    gap: .2rem;
-    transition: .3s;
     cursor: pointer;
-    filter: drop-shadow(0 0 5px #000000);
-}
-
-.channel-item:active{
-    scale: .95;
-}
-
-.left-side .channel-item img{
     width: var(--side-img-scale);
     height: var(--side-img-scale);
     object-fit: cover;
     border-radius: 50%;
+    flex-shrink: 0;
+    position: relative;
 }
 
-.channel-text{
-    display: flex;
-    align-items: end;
-    text-align: start;
+.channel-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0px 0px 5px black;
+}
+
+.channel-img:active{
+    scale: .95;
 }
 
 .right-side{
@@ -113,8 +141,34 @@ input:checked + .slider::before{
 .middle{
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.channels:has(.channel-item:hover) > :not(:hover){
-    opacity: .5;
+.introduction{
+    padding: 2rem 10rem;
+    border-radius: 2rem;
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.channel-info{
+    position: absolute;
+    padding: .8rem 1.5rem;
+    border-radius: 2rem;
+    left: 4.2rem;
+    top: 50%;
+    transform: translate(0, -50%);
+    z-index: 20;
+}
+
+.channel-text{
+    color: whitesmoke;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
