--- a/base/style.css
+++ b/base/style.css
@@ -56,7 +56,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 10;
     flex-direction: row;
     border-radius: 5px;
     backdrop-filter: blur(10px);
@@ -69,17 +68,18 @@ body {
 /* Theme*/
 
 .theme-selector {
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 60px;
     display: flex;
-    align-items: center;
     flex-direction: column;
     position: relative;
+    margin-top: -15rem;
+    margin-left:5rem ;
 }
 
 .theme-selector label {
-    width: 230px;
-    height: 70px;
+    width: 60px;
+    height: 30px;
     position: relative;
     display: block;
     background: var(--theme-selector-light);
@@ -100,22 +100,23 @@ body {
 }
 
 .theme-selector input:checked + label::after {
-    left: 215px;
+    left: 55px;
     transform: translateX(-100%);
     background: linear-gradient(180deg, #777, #3a3a3a);
 }
 
 .theme-selector label::after {
     content: "";
-    width: 50px;
-    height: 50px;
+    width: 20px;
+    height: 20px;
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 5px;
+    left: 5px;
     background: linear-gradient(180deg, #ffcc89, #d8860b);
     border-radius: 100px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+    
 }
 
 .theme-selector label svg{
@@ -124,14 +125,19 @@ body {
     z-index: 100;
 }
 label .sun{
-    left: -105px;
+    left: -21px;
+    top: -17px;
     outline:#fff;
     transition: 0.3s;
+    transform:scale(.4);
+    
 }
 label .moon{
-    left: 53px;
+    top: -17px;
+    left: 10px;
     fill: grey;
     transition: 0.3s;
+    transform:scale(.4);
 }
 .theme-selector input:checked + label svg.sun{
     fill: grey;
