--- a/base/style.css
+++ b/base/style.css
@@ -78,17 +78,27 @@ input:checked + .slider::before{
 
 .left-side{
     height: 100%;
-    padding: .5rem;
     width: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+}
+
+.left-side > *{ /*A .left-side diven beluli osszes elemnek ad paddinget*/
+    padding: .5rem;
 }
 
 .channel-text{
     display: block;
     width: 100%;
     text-align: center;
+}
+
+.left-side-top{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .left-side .line{
@@ -134,20 +144,17 @@ input:checked + .slider::before{
 }
 
 .right-side{
-    width: 15rem;
     height: 100%;
 }
 
 .middle{
-    width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .introduction{
-    padding: 2rem 10rem;
+    padding: 2rem 15rem;
     border-radius: 2rem;
     width: fit-content;
     display: flex;
@@ -168,7 +175,111 @@ input:checked + .slider::before{
 
 .channel-text{
     color: whitesmoke;
+}
+
+.left-side-bottom{
+    width: 100%;
+}
+
+.profile{
+    padding: 1rem;
+    width: 100%;
+}
+
+.profile .profile-pic{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 2.3rem;
+    cursor: pointer;
+    color: white;
+}
+
+.profile-settings{
+    z-index: 1000;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: blue;
+}
+
+
+
+
+
+
+
+
+.middle-content{
+    /* background-color: red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.middle-text{
+    /* background-color: blue; */
+}
+
+.middle-input-parent{
+    /* background-color: aqua; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.middle-input{
+    width: 100%;
+    /* background-color: purple; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1rem;
+    border-radius: 1rem;
+}
+
+.middle-input-keyboard{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    /* background-color: red; */
+}
+
+.middle-input-keyboard-emoji{
+    padding: 0 0 0 1rem;
+}
+
+.middle-input-emoji{
+    display: flex;
+    gap: 1rem;
+    padding: 0 1rem 0 0;
+    /* background-color: blue; */
+}
+
+#send-msg{
+    outline: 0;
+    border: 0;
+    width: 100%;
+    padding: 1rem 1rem;
+    font-weight: 600;
+    color: black;
+    font-size: 1.2rem;
+}
+
+.send-msg-emoji{
+    color: rgb(243, 243, 243);
+    font-size: 1.3rem;
+    cursor: pointer;
+}
+
+.middle-input, #send-msg{
+    background: var( --side-bg-color-light);
+}
+
+.input-down{
+    margin-bottom: -10rem;
 }
