--- a/base/variables/animations.css
+++ b/base/variables/animations.css
@@ -27,3 +27,71 @@
         rotate: 0;
     }
 }
+
+.profile-forwards{
+    animation-name: profileForwards;
+    animation-duration: .3s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes profileForwards {
+    0%{
+        width: 0rem;
+        height: 0rem;
+    }
+    100%{
+        bottom: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+    }
+}
+
+.profile-backwards{
+    animation-name: profileBackwards;
+    animation-duration: .3s;
+    animation-fill-mode: backwards;
+}
+
+@keyframes profileBackwards {
+    0%{
+        width: 100vw;
+        height: 100vh;
+    }
+    100%{
+        width: 0;
+        height: 0;
+    }
+}
+
+.right-side-forwards{
+    animation-name: RSForwards;
+    animation-duration: .4s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes RSForwards {
+    0%{
+        width: 0;
+    }
+ 
+    100%{
+        width: var(--right-side-width);
+    }
+}
+
+.input-forwards{
+    animation-name: inputForwards;
+    animation-duration: .3s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes inputForwards {
+    0%{
+        margin-bottom: -10rem;
+    }
+  
+    100%{
+        margin-bottom: 0;
+    }
+}
