--- a/base/variables/variables.css
+++ b/base/variables/variables.css
@@ -15,6 +15,8 @@
 
     --channel-bg-dark: rgb(0,0,0);
     --channel-bg-light: rgb(133, 133, 133);
+
+    --right-side-width: 15rem;
 }
 
 .active-bk{
@@ -60,4 +62,8 @@
 .container{
     width: 100%;
     height: 100%;
+}
+
+.right-side-extended{
+    width: var(--right-side-width);
 }
