--- a/base/style.css
+++ b/base/style.css
@@ -52,6 +52,10 @@ body {
     color: var(--text-color-dark);
 }
 
+main {
+    display: none;
+}
+
 .login {
     background-color: var(--login-box-light);
     height: 400px;
