--- a/base/style.css
+++ b/base/style.css
@@ -830,20 +830,19 @@ input:checked + .slider::before{
 }
 
 #addFriends {
-    height: 93%;
+    height: 100%;
     flex-direction: column;
     padding: 30px;
     padding-top: 10px;
-    background-color: rgb(113, 113, 204);
 }
 
 #addFriendsInput{
     padding: 5px;
     outline: none;
-    width: 90%;
+    width: 100%;
     font-size: 1.2rem;
     border-radius: 10px;
-    margin: 20px auto 20px auto;
+    margin-bottom: 10px;
 }
 
 .friend{
@@ -860,10 +859,6 @@ input:checked + .slider::before{
     cursor: pointer;
 }
 
-#sfRequest{
-    padding: 10px;
-    cursor: pointer;
-}
 
 #addFriendsBtn {
     gap: 10px;
@@ -879,4 +874,20 @@ input:checked + .slider::before{
 
 .close-sf:hover{
     color: red;
+}
+
+.afUser{
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.sfRequestBtn{
+    cursor: pointer;
+}
+
+.sfRequestBtn:hover{
+    color: rgb(3, 255, 3);
 }
