friend request lista létrehozása

--- a/base/style.css
+++ b/base/style.css
@@ -912,7 +912,7 @@ input:checked + .slider::before{
 #friendRequests{
     display: flex;
     width: 90%;
-    
+    flex-direction: column;
 }
 
 .fRequest{
