--- a/base/style.css
+++ b/base/style.css
@@ -25,7 +25,7 @@ body{
     position: relative;
 }
 
-.switch{
+/* .switch{
     position: relative;
     display: inline-block;
     cursor: pointer;
@@ -68,12 +68,179 @@ input:checked + .slider {
 
 input:checked + .slider::before{
     transform: translateX(26px);
+} */
+
+.switch{
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    width: 90px;
+    height: 34px;
+    border-radius: 34px;
+    background: rgb(55, 165, 243);
+    /* background: linear-gradient(90deg,rgb(10, 10, 16), rgb(28, 36, 79)); */
+    overflow: hidden;
+    scale: 4;
+    box-shadow: 0px 0px 5px rgb(63, 63, 63) inset;
 }
 
+.slider{
+    position: absolute;
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    top: 4px;
+    background-color: rgb(245, 242, 50);
+    transition: .4s;
+    border-radius: 50%;
+}
 
+.switch .cloud-1{
+    position: absolute;
+    top: 4px;
+    left: 25px;
+    width: 15px;
+    height: 15px;
+}
 
+.switch .cloud-2{
+    position: absolute;
+    top: 10px;
+    left: 30px;
+    width: 25px;
+    height: 25px;
+    opacity: .7;
+}
 
+.switch .cloud-3{
+    position: absolute;
+    top: 1px;
+    left: 55px;
+    width: 30px;
+    height: 30px;
+    opacity: .9;
+}
 
+.siwtch .cloud{
+    object-fit: cover;
+    transition: .4s;
+}
+
+.switch .star-1{
+    top: 10px;
+    left: 20px;
+    width: 2px;
+    height: 2px;
+}
+
+.switch .star-2{
+    top: 10px;
+    left: 30px;
+    width: 2px;
+    height: 2px;
+}
+
+.switch .star-3{
+    top: 5px;
+    left: 50px;
+    width: 2px;
+    height: 2px;
+}
+
+.switch .star-4{
+    top: 2px;
+    left: 40px;
+    width: 2px;
+    height: 2px;
+}
+
+.switch .star-5{
+    top: 12px;
+    left: 10px;
+    width: 2px;
+    height: 2px;
+}
+
+.switch .star-6{
+    top: 4px;
+    left: 12px;
+    width: 2px;
+    height: 2px;
+}
+
+.switch .star-7{
+    top: 10px;
+    left: 35px;
+    width: 2px;
+    height: 2px;
+}
+
+.switch .star-8{
+    top: 4px;
+    left: 23px;
+    width: 2px;
+    height: 2px;
+}
+
+.switch .star-9{
+    top: 14px;
+    left: 40px;
+    width: 2px;
+    height: 2px;
+}
+
+.switch .star-10{
+    top: 5px;
+    left: 50px;
+    width: 2px;
+    height: 2px;
+}
+
+.switch .star{
+    background-color: white;
+    position: absolute;
+    border-radius: 100%;
+}
+
+.switch .hill-1{
+    background: linear-gradient(90deg,rgb(10, 10, 16), rgb(28, 36, 79));
+    top: 20px;
+    left: -7px;
+    width: 40px;
+    height: 40px;
+}
+
+.switch .hill-2{
+    background: rgb(0, 156, 0);
+    top: 20px;
+    right: -7px;
+    width: 35px;
+    height: 35px;
+}
+
+.switch .hill{
+    position: absolute;
+    border-radius: 50%;
+}
+
+.switch .circle-1{
+    top: 0px;
+    left: 20px;
+}
+
+.switch .circle-2{
+    top: 0px;
+    left: 45px;
+}
+
+.switch .circle{
+    position: absolute;
+    border-radius: 50%;
+    background-color: transparent;
+    border-right: 1px solid rgb(184, 184, 184);
+    width: 35px;
+    height: 35px;
+}
 
 
 .left-side{
@@ -199,11 +366,13 @@ input:checked + .slider::before{
 }
 
 .profile-settings{
-    z-index: 1000;
+    z-index: 10000;
     position: fixed;
     bottom: 0;
     left: 0;
     background-color: blue;
+    justify-content: center;
+    align-items: center;
 }
 
 
