--- a/base/variables/variables.css
+++ b/base/variables/variables.css
@@ -7,26 +7,34 @@
 *{margin: 0; padding: 0; box-sizing: border-box;}
 
 :root{
-    --main-bg-color-dark: rgb(30,30,30);
+    --main-bg-color-dark: rgb(57, 57, 57);
     --main-bg-color-light: rgb(228, 228, 228);
     --main-color-light: black;
     --main-color-dark: white;
 
     --left-side-width: 5rem;
 
-    --side-bg-color-dark: rgb(20,20,20);
+    --side-bg-color-dark: rgb(34, 34, 34);
     --side-bg-color-light: rgb(192, 192, 192);
     --side-color-dark: white;
     --side-color-light: black;
     
-    --user-bg-color-hover: rgb(175, 175, 175);
+    --user-bg-color-light-hover: rgb(175, 175, 175);
+    --user-bg-color-dark-hover: rgb(53, 53, 53);
     
-    --logout-bg-color: rgb(175, 175, 175);
-    --logout-bg-color-hover: rgb(163, 163, 163);
+    --logout-bg-color-light: rgb(175, 175, 175);
+    --logout-bg-color-light-hover: rgb(163, 163, 163);
+    --logout-color-light: black;
+    --logout-color-dark: white;
+    --logout-bg-color-dark: rgb(54, 54, 54);
+    --logout-bg-color-dark-hover: rgb(65, 65, 65);
+
+    --box-shadow-light: rgb(158, 158, 158);
+    --box-shadow-dark: rgb(3, 3, 3);
 
     --side-img-scale: 4rem;
 
-    --channel-bg-dark: rgb(0,0,0);
+    --channel-bg-dark: rgb(28, 28, 28);
     --channel-bg-light: rgb(133, 133, 133);
 
     --right-side-width: 15rem;
