--- a/base/variables/variables.css
+++ b/base/variables/variables.css
@@ -111,3 +111,11 @@
     transform: translateX(0px); 
     background-color: rgb(245, 242, 50);
 }
+
+.selected-option{
+    background-color: gray;
+}
+
+.unselected-option{
+    background-color: transparent;
+}
