--- a/base/variables/animations.css
+++ b/base/variables/animations.css
@@ -165,3 +165,33 @@
         opacity: 0;
     }
 }
+
+.ls-forwards{
+    animation-name: ls-fw;
+    animation-duration: .3s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes ls-fw {
+    0%{
+        left: 0rem;
+    }
+    100%{
+        left: -5rem;
+    }
+}
+
+.ls-backwards{
+    animation-name: ls-bw;
+    animation-duration: .3s;
+    animation-fill-mode: backwards;
+}
+
+@keyframes ls-bw {
+    0%{
+        left: -5rem;
+    }
+    100%{
+        left: 0rem;
+    }
+}
